<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="35dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMaxWidth="0dp"
            app:tabGravity="fill"
            app:tabMode="scrollable">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/JANUARY" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/FEBRUARY" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MARCH" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/APRIL" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MAY" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/JUNE" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/JULY" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AUGUST" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SEPTEMBER" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/OCTOBER" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NOVEMBER" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DECEMBER" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".9"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-7486954764491752/1326102266"
        app:layout_anchorGravity="bottom" />

</LinearLayout>